# anope-mods-contrib

./: README.md  chanstats_plus.cpp  cs_akick_check.cpp  cs_topichistory.cpp  hs_nethost.cpp  m_apiauth.cpp  m_apiauth.md  m_expirenotice copy.cpp  m_expirenotice.cpp  m_login.cpp  m_memo_chanaccess.cpp  m_newregmsg.cpp  m_ns_masset.cpp  m_saslJwt.cpp  m_secure.cpp  m_sqlauth.cpp  m_youtube.cpp  ns_massset.cpp  ns_sasl_oauthbearer.cpp  os_chantrap.cpp  os_forceid.cpp  os_notify.cpp  os_notinchan.cpp  os_regset.cpp  os_spamfilter.cpp  rpc_chanstatsplus.cpp
ChanFix/: CMakeLists.txt  chanfix.cpp  chanfix.example.conf  chanfix.h  chanfix_core.cpp
DiceServ/: diceserv.cpp  diceserv.h  ds_calc.cpp  ds_dnd3echar.cpp  ds_earthdawn.cpp  ds_list.cpp  ds_roll.cpp  ds_set.cpp  ds_status.cpp
GameServ/: gameserv.cpp  gs_sexdice.cpp
GroupServ/: CMakeLists.txt  groupserv.cpp  groupserv.example.conf  groupserv.h  groupserv_core.cpp
HelpServ/: CMakeLists.txt  helpserv.cpp  helpserv.example.conf  helpserv.h  helpserv_core.cpp
InfoServ/: CMakeLists.txt  infoserv.cpp  infoserv.example.conf  infoserv.h  infoserv_core.cpp
anope-gameserv/: gs_eightball.cpp  gs_namegen.cpp  gs_roulette.cpp
wiki/: Home.md  Modules.md  _Footer.md  _Sidebar.md  chanfix.md  chanstats_plus.md  cs_akick_check.md  cs_topichistory.md  groupserv.md  helpserv.md  hs_nethost.md  infoserv.md  m_apiauth.md  m_expirenotice.md  m_login.md  m_memo_chanaccess.md  m_saslJwt.md  m_secure.md  m_sqlauth.md  m_youtube.md  ns_sasl_oauthbearer.md  os_chantrap.md  os_forceid.md  os_notinchan.md  os_regset.md  (+1 more)
